rust/node-structuring/tests/snapshots/examples__tables-to-datatables-simple.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This table has consistent rows, simple text-only cells, and no spans, so should be converted to a datatable."
          }
        }
      ]
    },
    {
      "type": "Datatable",
      "columns": [
        {
          "type": "DatatableColumn",
          "name": "Name",
          "values": [
            "Alice",
            "Bob",
            "Carol"
          ],
          "validator": {
            "type": "ArrayValidator",
            "itemsValidator": {
              "type": "StringValidator"
            }
          }
        },
        {
          "type": "DatatableColumn",
          "name": "Age",
          "values": [
            25,
            30,
            28
          ],
          "validator": {
            "type": "ArrayValidator",
            "itemsValidator": {
              "type": "IntegerValidator"
            }
          }
        },
        {
          "type": "DatatableColumn",
          "name": "Score",
          "values": [
            95,
            87,
            92
          ],
          "validator": {
            "type": "ArrayValidator",
            "itemsValidator": {
              "type": "IntegerValidator"
            }
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This table has formatting in some cells so should not be automatically converted to a datatable"
          }
        }
      ]
    },
    {
      "type": "Table",
      "rows": [
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "cellType": "HeaderCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Species"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "cellType": "HeaderCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Weight"
                      }
                    }
                  ]
                }
              ]
            }
          ],
          "rowType": "HeaderRow"
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Emphasis",
                      "content": [
                        {
                          "type": "Text",
                          "value": {
                            "string": "Arripis trutta"
                          }
                        }
                      ]
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "1.4"
                      }
                    }
                  ]
                }
              ]
            }
          ]
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Emphasis",
                      "content": [
                        {
                          "type": "Text",
                          "value": {
                            "string": "Coryphaena hippurus"
                          }
                        }
                      ]
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "24.3"
                      }
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}
