rust/node-structuring/tests/snapshots/examples__tables-with-captions-before.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This document has table captions before the table."
          }
        }
      ]
    },
    {
      "type": "Table",
      "id": "tab-1",
      "label": "1",
      "labelAutomatically": false,
      "caption": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Summary of experimental results showing mean values and standard deviations."
              }
            }
          ]
        }
      ],
      "rows": [
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Condition"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Mean"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "SD"
                      }
                    }
                  ]
                }
              ]
            }
          ],
          "rowType": "HeaderRow"
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Control"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "5.2"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "1.1"
                      }
                    }
                  ]
                }
              ]
            }
          ]
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Treatment"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "7.8"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "1.3"
                      }
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This content should remain after the table."
          }
        }
      ]
    },
    {
      "type": "Table",
      "id": "tab-2",
      "label": "2",
      "labelAutomatically": false,
      "caption": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Sometimes a pipe separates the label from the caption."
              }
            }
          ]
        }
      ],
      "rows": [
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "A"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "B"
                      }
                    }
                  ]
                }
              ]
            }
          ],
          "rowType": "HeaderRow"
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "1"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "2"
                      }
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}
